# rustypass

./: .env  .eslintrc.json  .gitignore  .prettierrc.json  Cargo.toml  README.md  TODO.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tauri-dev  vite.config.js  vite.config.ts
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: TheWelcome.vue
src/: App.svelte  App.vue  main.rs  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/test/: config.toml
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  scanner.rs
src-tauri/src/config/: config_dir.rs
src/assets/: main.css
src/components/: HelloWorld.vue  MainView.vue  TheWelcome.vue
src/environment/: index.ts
src/lib/: mocks.js  service.js
src/mock/: mocks.ts
src/stores/: file.ts  trace.ts
src/widgets/: table.rs
terzo/: README.md  browser-dev  index.html  package-lock.json  vite.config.js
terzo/src/: App.svelte
terzo/src-tauri/src/: main.rs
terzo/src/lib/: service.js
vue-front/: index.html  package-lock.json  tsconfig.config.json
vue-front/src/components/: MainView.vue
vue-front/src/mock/: mocks.ts
