[package]
name = "rustypass"
version = "0.1.0"
description = "A simple app to copy _gopass_ passwords to clipboard."
authors = ["Juha Ruotsalainen <juha.ruotsalainen@iki.fi>"]
license = "MIT"
repository = "https://github.com/konta/rustypass"
default-run = "rustypass"
edition = "2021"
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.3", features = ["api-all"] }
walkdir = "2.3.2"
xdg = "2.4.1"
config = "0.13.3"
dirs = "4.0.0"
shellexpand = "3.0.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
